fixed the grid overlapping the first render div

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+*, *::before, *::after{
+    box-sizing: border-box;
+}
+
 :root{
     --cell-size: 100px;
     --mark-size: calc(var(--cell-size) * .9);
@@ -7,6 +11,25 @@
 body{
     margin: 0px;
     background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(37,145,251,0.98) 0.1%, rgba(0,7,128,1) 99.8% );
+}
+
+.first-render{
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, .9);
+    color: white;
+    font-size: 3rem;
+}
+
+.first-render.show{
+    display: flex;
 }
 
 .wrapper{
@@ -76,7 +99,6 @@ body{
     width: var(--cell-size);
     height: var(--cell-size);
     display: flex;
-    position: relative;
     justify-content: center;
     align-items: center;
     border: solid 1px black;
@@ -168,21 +190,3 @@ body{
     transition: 0.5s;
 }
 
-.first-render{
-    display: none;
-    flex-direction: column;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, .9);
-    color: white;
-    font-size: 3rem;
-}
-
-.first-render.show{
-    display: flex;
-}
